moved index to src

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Greg's page</title>
-  <link href="output.css" rel="stylesheet">
-  <link href="glide.core.min.css" rel="stylesheet">
-  <link href="glide.theme.min.css" rel="stylesheet">
+  <link href="/dist/output.css" rel="stylesheet">
+  <link href="/dist/glide.core.min.css" rel="stylesheet">
+  <link href="/dist/glide.theme.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-white">
@@ -30,10 +30,13 @@
 
         <!-- primary nav -->
         <div class="hidden sm:flex items-center space-x-1">
-          <a href="#" class="py-1 px-3 text-gray-700 link link-underline link-underline-black">Solutions</a>
-          <a href="#" class="py-1 px-3 text-gray-700 link link-underline link-underline-black">Industries</a>
-          <a href="#" class="py-1 px-3 text-gray-700 link link-underline link-underline-black">Samples</a>
-          <a href="#" class="py-1 px-3 text-gray-700 link link-underline link-underline-black">Resources</a>
+          <a href="#"
+            class="py-1 px-3 text-gray-700 link link-underline link-underline-black no-underline">Solutions</a>
+          <a href="#"
+            class="py-1 px-3 text-gray-700 link link-underline link-underline-black no-underline">Industries</a>
+          <a href="#" class="py-1 px-3 text-gray-700 link link-underline link-underline-black no-underline">Samples</a>
+          <a href="#"
+            class="py-1 px-3 text-gray-700 link link-underline link-underline-black no-underline">Resources</a>
         </div>
         <!-- mobile version -->
         <div class="sm:hidden flex items-center">
@@ -66,7 +69,7 @@
     }
 
     .link-underline-black {
-      background-image: linear-gradient(transparent, transparent), linear-gradient(rgb(185 28 28), #b91c1c)
+      background-image: linear-gradient(transparent, transparent), linear-gradient(rgb(54, 28, 185), #e8e2e7)
     }
 
     .link-underline:hover {
@@ -261,15 +264,15 @@
         <ul class="glide__slides">
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar2.png" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">"Firma FastTony spadła mi z nieba! Wiedziałam, że muszę
-                  zająć się tym tematem w firmie, ale jak to ugryźć, kiedy się na tym nie znasz i cię to nie kręci…?!
-                  Nie mam czasu na wgłębienie się i uczenie się, jak robić kampanie, ustalać grup docelowych itd itp.
-                  Teraz wystarczy, że wrzucam posta, a wszystko robi się samo. Oszczędzam czas i pieniądze, bo firmy
-                  które zazwyczaj to robią za Ciebie, biorą kupę kasy… Bardzo podobają mi się ostatnie spotkania online,
-                  podczas których podpowiadają, jak tworzyć treści, aby reklamy były jeszcze skuteczniejsze. Bardzo
-                  polecam!"</p>
+                <p class="p-10 text-xl italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS (Harmony)
+                  spełnia wszystkie nasze wymagania, jeśli chodzi o elastyczność i proaktywne zarządzanie contentem w
+                  sklepie. Harmony to również dobry kompromis pomiędzy kosztem a funkcjonalnością, co udowodnił wybór
+                  platformy w drodze procesu przetargowego. Warto zaznaczyć, że równie ważne jak powyższe są relacje,
+                  jakie mamy z Mood Media. Zespół ds. obsługi klienta zawsze służy wsparciem i reaguje szybko. Dużą
+                  zaletą jest również obsługa klienta w kwestiach technicznych. Bardzo doceniamy to, jak sprawnie sklepy
+                  otrzymują potrzebne im wsparcie.”</p>
                 <p
                   class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Lucyna Tomczyk -</span> Auto Gaz Serwis Dariusz Tomczyk -
@@ -280,7 +283,7 @@
           </li>
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar.png" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
                 <p class="p-10 text-xl italic text-[#293a40]">"Dla biznesu lokalnego – brałbym jak w dym! Ba, sam
                   wziąłem do obsługi swoich klientów w Rzeszowie. Prowadzę 12-stu takich klientów, każdy z innej branży.
@@ -299,7 +302,7 @@
           </li>
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar3.png" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
                 <p class="p-10 text-xl italic text-[#293a40]">"Jak wyobrażam sobie idealny świat biznesu w przyszłości?
                   Nie muszę, to już się dzieje dzięki Smart FastTony. Wyobraź sobie, że firma Daniela tworzy sztuczną
