remove index from src

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- logo -->
         <div>
           <a href="#" class="flex items-center py-5">
-            <svg class="h-8 w-8 mr-2 text-red-700" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            <svg class="h-8 w-8 mr-2 text-purple-700" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
               strokeWidth={1.5} stroke="currentColor" className="w-8 h-8">
               <path strokeLinecap="round" strokeLinejoin="round"
                 d="M9 9l10.5-3m0 6.553v3.75a2.25 2.25 0 01-1.632 2.163l-1.32.377a1.803 1.803 0 11-.99-3.467l2.31-.66a2.25 2.25 0 001.632-2.163zm0 0V2.25L9 5.25v10.303m0 0v3.75a2.25 2.25 0 01-1.632 2.163l-1.32.377a1.803 1.803 0 01-.99-3.467l2.31-.66A2.25 2.25 0 009 15.553z" />
@@ -104,7 +104,7 @@
               <!-- przyciski -->
               <div class="flex flex-row">
                 <button
-                  class="bg-gradient-to-t from-gray-800 to-red-900 hover:bg-gradient-to-b hover:from-red-900 hover:to-gray-800 hover:via-gray-800 hover:shadow-lg text-white font-bold py-6 px-8 rounded-3xl mt-7 mr-5 text-base scale-100 hover:scale-110 ease-in duration-200 mb-3">EXPLORE
+                  class="bg-gradient-to-t from-gray-800 to-purple-700 hover:bg-gradient-to-b hover:from-purple-700 hover:to-gray-800 hover:via-gray-800 hover:shadow-lg text-white font-bold py-6 px-8 rounded-3xl mt-7 mr-5 text-base scale-100 hover:scale-110 ease-in duration-200 mb-3">EXPLORE
                   THE POSSIBILITIES!</button>
               </div>
             </div>
@@ -197,7 +197,7 @@
             <p>Skontaktuj się z nami już dziś, aby dowiedzieć się, co nasze rozwiązania mogą zrobić dla Twojej firmy.
             </p>
             <button
-              class="bg-gradient-to-t from-gray-800 to-red-900 hover:bg-gradient-to-b hover:from-red-900 hover:to-gray-800 hover:via-gray-800 hover:shadow-lg text-white font-bold py-6 px-8 rounded-3xl mt-7 mr-5 text-base scale-100 hover:scale-110 ease-in duration-200 mb-3">Skontaktuj
+              class="bg-gradient-to-t from-gray-800 to-purple-700 hover:bg-gradient-to-b hover:from-purple-700 hover:to-gray-800 hover:via-gray-800 hover:shadow-lg text-white font-bold py-6 px-8 rounded-3xl mt-7 mr-5 text-base scale-100 hover:scale-110 ease-in duration-200 mb-3">Skontaktuj
               się z nami!</button>
           </div>
         </div>
@@ -342,6 +342,7 @@
       autoplay: 15000,
     }).mount()
   </script>
+  <h1 class="text-blue-900">dupa</h1>
   <!-- Foooter -->
   <section class="bg-white">
     <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8">
