--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Greg's page</title>
-  <link href="/dist/output.css" rel="stylesheet">
-  <link href="/dist/glide.core.min.css" rel="stylesheet">
-  <link href="/dist/glide.theme.min.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
+  <link href="./dist/glide.core.min.css" rel="stylesheet">
+  <link href="./dist/glide.theme.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-white">
