--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="../img/Solid_black.svg" alt="pic1">
+          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic1">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -141,7 +141,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="../img/Solid_black.svg" alt="pic2">
+          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic2">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -154,7 +154,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="../img/Solid_black.svg" alt="pic3">
+          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic3">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -167,7 +167,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="../img/Solid_black.svg" alt="pic4">
+          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic4">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -181,7 +181,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="../img/Solid_black.svg" alt="pic5">
+          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic5">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -222,7 +222,7 @@
         </p>
       </div>
       <div class="basis-1/2">
-        <img src="../img/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="working people" class="rounded-xl">
+        <img src="./img/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="working people" class="rounded-xl">
       </div>
     </div>
   </div>
@@ -264,7 +264,7 @@
         <ul class="glide__slides">
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="./img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
                 <p class="p-10 text-xl italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS (Harmony)
                   spełnia wszystkie nasze wymagania, jeśli chodzi o elastyczność i proaktywne zarządzanie contentem w
@@ -283,7 +283,7 @@
           </li>
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="./img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
                 <p class="p-10 text-xl italic text-[#293a40]">"Dla biznesu lokalnego – brałbym jak w dym! Ba, sam
                   wziąłem do obsługi swoich klientów w Rzeszowie. Prowadzę 12-stu takich klientów, każdy z innej branży.
@@ -302,7 +302,7 @@
           </li>
           <li class="glide__slide">
             <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="/img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
+              <img src="./img/person1.jpg" class="rounded-full w-20 h-20 sm:mr-1">
               <div class="sm:text-left">
                 <p class="p-10 text-xl italic text-[#293a40]">"Jak wyobrażam sobie idealny świat biznesu w przyszłości?
                   Nie muszę, to już się dzieje dzięki Smart FastTony. Wyobraź sobie, że firma Daniela tworzy sztuczną
@@ -342,7 +342,6 @@
       autoplay: 15000,
     }).mount()
   </script>
-  <h1 class="text-blue-900">dupa</h1>
   <!-- Foooter -->
   <section class="bg-white">
     <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8">
