--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         </div>
       </div>
       <div class="mobile-menu hidden sm:hidden pb-4">
-        <a href="#" class="block py-2 px-4 text-sm text-gray-700 link link-underline link-underline-black">Solutions</a>
         <a href="#"
-          class="block py-2 px-4 text-sm text-gray-700 link link-underline link-underline-black">Industries</a>
-        <a href="#" class="block py-2 px-4 text-sm text-gray-700 link link-underline link-underline-black">Samples</a>
-        <a href="#" class="block py-2 px-4 text-sm text-gray-700 link link-underline link-underline-black">Resources</a>
+          class="block py-3 px-4 text-base text-gray-700 link link-underline link-underline-black">Rozwiązania</a>
+        <a href="#" class="block py-2 px-4 text-base text-gray-700 link link-underline link-underline-black">Branże</a>
+        <a href="#" class="block py-2 px-4 text-base text-gray-700 link link-underline link-underline-black">Demo</a>
+        <a href="#" class="block py-2 px-4 text-base text-gray-700 link link-underline link-underline-black">Baza</a>
       </div>
     </div>
   </nav>
@@ -86,13 +86,13 @@
     })
   </script>
   <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
-    <div class="lg:container lg:mx-auto text-center">
+    <div class="lg:container lg:mx-auto text-center mx-10">
       <div class="relative">
-        <div class="flex justify-center lg:pt-24 lg:pb-18 lg:px-0 md:pt-32 md:pb-28 md:px-10 pb-96 mx-10 pt-20">
+        <div class="flex justify-center lg:pt-24 lg:pb-18 lg:px-0 md:pt-32 md:pb-28 md:px-10 pb-20 mx-10 pt-20">
           <div class="flex md:flex-row text-gray-100 flex-col w-128">
             <!-- tekst 1 segmentu -->
             <div class="text-left z-10 md:w-112 ">
-              <h1 class="text-6xl pb-4 font-bold leading-12 ">
+              <h1 class="md:text-6xl text-4xl pb-4 font-bold leading-12 ">
                 DOSKONAŁE DOŚWIADCZENIE KLIENTA
               </h1>
               <div class="leading-9 text-lg">
@@ -117,20 +117,20 @@
   </div>
   <!-- tiles -->
   <div class="lg:container lg:mx-auto text-center">
-    <p class="text-xl pt-16 text-gray-700">A Full Range of</p>
-    <h2 class="text-4xl mt-2 text-gray-700 mx-10"><b>Digital Solutions</b></h2>
-    <p class="text-xl pt-4 text-gray-700 mx-10">
-      Music experts, digital artists, content creators and customer
-      service champions – all driven to bring a fresh perspective to every Customer Experience we design. Backed by a
-      global service network of certified technicians, our legacy of proven success is what sets us apart. Our passion
-      is why we succeed.</p>
+    <p class="md:text-2xl text-xl pt-16 text-gray-700">Pełny zakres</p>
+    <h2 class="md:text-4xl text-3xl mt-2 text-gray-700 mx-10"><b>Rozwiązania digitalowe</b></h2>
+    <p class="md:text-xl text-lg pt-4 text-gray-700 mx-10">
+      Eksperci muzyczni, artyści digitalowi, twórcy contentu i mistrzowie obsługi klienta – wszyscy zmotywowani, by
+      wnieść świeże spojrzenie do każdego projektowanego Doświadczenia Klienta. Pełne sukcesów dziedzictwo wspierane
+      przez globalną sieć serwisową jest najlepszym świadectwem o naszej pozycji rynkowej. Sukces zawdzięczamy naszej
+      pasji.</p>
     <div class="flex justify-center mx-10">
       <div class="grid lg:grid-cols-3 my-8 md:grid-cols-2 grid-cols-1 gap-8 text-gray-550 w-128">
         <!-- 1 tile -->
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic1">
+          <img class="rounded-xl" src="./img/background4.jpg" alt="pic1">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -143,7 +143,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic2">
+          <img class="rounded-xl" src="./img/background4.jpg" alt="pic2">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -156,7 +156,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic3">
+          <img class="rounded-xl" src="./img/background4.jpg" alt="pic3">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -169,7 +169,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic4">
+          <img class="rounded-xl" src="./img/background4.jpg" alt="pic4">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -183,7 +183,7 @@
         <div
           class="border-none shadow-3xl text-center leading-8 basis-1/2 flex flex-col justify-center items-center relative scale-100 hover:scale-105 ease-in duration-200">
 
-          <img class="rounded-xl brightness-90" src="./img/Solid_black.svg" alt="pic5">
+          <img class="rounded-xl" src="./img/background4.jpg" alt="pic5">
 
           <div class="absolute text-gray-100 px-8">
             <p class="text-xl">
@@ -194,8 +194,8 @@
         </div>
         <!-- 6 tile -->
         <div
-          class="border-none shadow-3xl text-left leading-8 basis-1/2 flex flex-col justify-center items-center pl-4">
-          <div class="text-gray-700 text-3xl font-bold">
+          class="border-none shadow-3xl text-left leading-8 basis-1/2 flex flex-col justify-center items-center md:pl-4 pl-0 pt-2">
+          <div class="text-gray-700 md:text-3xl text-2xl font-bold">
             <p>Skontaktuj się z nami już dziś, aby dowiedzieć się, co nasze rozwiązania mogą zrobić dla Twojej firmy.
             </p>
             <button
@@ -218,7 +218,7 @@
               <p class="text-lg pb-2 text-red-700">
                 ŚWIATOWY LIDER W BUDOWIE DOŚWIADCZEŃ KLIENTA
               </p>
-              <p class="text-lg leading-7">
+              <p class="md:text-lg text-base leading-7">
                 Mood Media to światowy lider w dziedzinie rozwiązań mediowych ukierunkowanych na rozwój Doświadczenia
                 Klienta dedykowanych dla sklepów . Wzmacniamy więzi emocjonalne powstałe między markami a konsumentami
                 dzięki zastosowaniu odpowiedniej mieszanki rozwiązań wizualnych, dźwiękowych, zapachowych i systemowych.
@@ -234,7 +234,7 @@
       </div>
     </div>
   </div>
-
+  <!-- One solution -->
   <div class="bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
     <div class="lg:container lg:mx-auto text-center mx-10">
       <div class="relative">
@@ -247,7 +247,7 @@
                   <span class="text-black">NIESKOŃCZONE MOŻLIWOŚCI.</span>
                 </h1>
               </div>
-              <div class="leading-7 text-white">
+              <div class="leading-7 text-white md:text-lg text-base">
                 <p>Pożegnaj się z wieloma dostawcami i panelami administracyjnymi. Oto Harmony, platforma Brand
                   Experience nowej generacji. To kompleksowe rozwiązanie brandingowe obsługujące obszary wizualny,
                   dzwiękowy, zapachowy, społecznościowy i systemowy. Zarządzanie mediami w sklepie nigdy nie było tak
