--- a/index.html
+++ b/index.html
@@ -275,68 +275,92 @@
       </div>
     </div>
   </div>
-  <div class="mx-auto w-11/12 bg-white sm:pl-10 sm:pr-10 sm:pb-10 rounded-lg shadow-lg">
+  <p class="text-center text-4xl font-semibold p-10">
+    What Our Customers Say
+  </p>
+  <!-- Opinie klientów -->
+  <div class="mx-auto w-11/12 bg-white pt-10 sm:pl-10 sm:pr-10 sm:pb-10 rounded-lg shadow-lg">
     <div class="glide">
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides">
           <li class="glide__slide">
-            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar2.png" class="rounded-full w-20 h-20 sm:mr-1">
+            <div class="flex justify-center">
+              <img src="./img/person1.jpg" class="rounded-full h-40 sm:mr-1">
+            </div>
+            <div
+              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3 text-left">
               <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">"Firma FastTony spadła mi z nieba! Wiedziałam, że muszę
-                  zająć się tym tematem w firmie, ale jak to ugryźć, kiedy się na tym nie znasz i cię to nie kręci…?!
-                  Nie mam czasu na wgłębienie się i uczenie się, jak robić kampanie, ustalać grup docelowych itd itp.
-                  Teraz wystarczy, że wrzucam posta, a wszystko robi się samo. Oszczędzam czas i pieniądze, bo firmy
-                  które zazwyczaj to robią za Ciebie, biorą kupę kasy… Bardzo podobają mi się ostatnie spotkania online,
-                  podczas których podpowiadają, jak tworzyć treści, aby reklamy były jeszcze skuteczniejsze. Bardzo
-                  polecam!"</p>
+                <p class="p-10 text-xl italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS (Harmony)
+                  spełnia wszystkie nasze wymagania, jeśli chodzi o elastyczność i proaktywne zarządzanie contentem w
+                  sklepie. Harmony to również dobry kompromis pomiędzy kosztem a funkcjonalnością, co potwierdza fakt,
+                  że platforma została wybrana przez nas w postępowaniu przetargowym. Warto zaznaczyć, że równie ważne
+                  jak powyższe są relacje, jakie mamy z Mood Media. Zespół ds. obsługi klienta zawsze służy wsparciem i
+                  reaguje szybko. Dużą zaletą jest również obsługa klienta w kwestiach technicznych. Bardzo doceniamy
+                  to, jak sprawnie sklepy otrzymują potrzebne im wsparcie.”
+                </p>
                 <p
                   class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Lucyna Tomczyk -</span> Auto Gaz Serwis Dariusz Tomczyk -
-                  <a href="#" class="text-blue-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
           </li>
           <li class="glide__slide">
-            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar.png" class="rounded-full w-20 h-20 sm:mr-1">
+            <div class="flex justify-center">
+              <img src="./img/person2.jpg" class="rounded-full h-40 w-28 sm:mr-1">
+            </div>
+            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3">
               <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">"Dla biznesu lokalnego – brałbym jak w dym! Ba, sam
-                  wziąłem do obsługi swoich klientów w Rzeszowie. Prowadzę 12-stu takich klientów, każdy z innej branży.
-                  Pisząc, że „prowadzę”, mam na myśli, że pomagam redagować treści, układać plan postów i budować
-                  zaangażowanie, a reklamy robią się same – dosłownie. Według mnie, z perspektywy prawie dwóch lat
-                  doświadczeń ze SMARTem – zdecydowanie warto, a w razie extra potrzeby, można dopalić dodatkową reklamą
-                  z managera reklam. Rozwiązanie niemal „bezdotykowe”, a skuteczne […] Podsumowując, bierz w ciemno, a
-                  kasę zaoszczędzoną przeznacz na marketing, copy lub rozwój branżowy."</p>
+                <p class="p-10 text-xl italic text-[#293a40]">„Dzięki zastosowaniu marketingu zapachowego w głównym
+                  wejściu, nasi goście i pracownicy, wchodząc do hubu czują się odprężeni, co odzwierciedla atmosferę,
+                  którą chcemy tworzyć w Microsoft. Muzyka w tle również sprawia, że ludzie czują się szczęśliwsi i
+                  nadaje zarówno strefie lobby jak restauracji przyjaznego i domowego charakteru.”
+                </p>
                 <p
                   class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Robert T. Zaborowski -</span> KARO - agencja reklamowa -
-                  <a href="#" class="text-blue-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
           </li>
           <li class="glide__slide">
-            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative p-3">
-              <img src="../img/avatar3.png" class="rounded-full w-20 h-20 sm:mr-1">
+            <div class="flex justify-center">
+              <img src="./img/person3.jpg" class="rounded-full h-40 sm:mr-1">
+            </div>
+            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3">
               <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">"Jak wyobrażam sobie idealny świat biznesu w przyszłości?
-                  Nie muszę, to już się dzieje dzięki Smart FastTony. Wyobraź sobie, że firma Daniela tworzy sztuczną
-                  inteligencję, która dokładnie poznaje Twój biznes i Twoją konkurencje. Następnie Ty wciskasz play i
-                  machina rusza. Tak powstaje idealna synergia pomiędzy zaawansowaną technologią Smart FastTony, a tym
-                  co najlepsze w człowieku – jego kreatywność. To zdecydowanie świat idealny kiedy technologia na
-                  automacie współpracuje z Twoją kreatywnością […] Szczerze Polecam i Rekomenduję – nie stać Cię by nie
-                  mieć tego rozwiązania, uwierz mi wiem co mówię."</p>
+                <p class="p-10 text-xl italic text-[#293a40]">„Jeśli chodzi o doświadczenie klientów w naszych
+                  placówkach, potrzebowaliśmy dostawcy, który zapewni nam świetną muzykę i elastyczne formy komunikatów
+                  w przystępnej cenie. Muzyka jest często aktualizowana, a naszym pracownikom i klientom bardzo podoba
+                  się to, co słyszą. Komunikaty wywarły pozytywny wpływ na wynik firmy, a firma Mood jest bardzo
+                  responsywna. Otrzymaliśmy spójną całość – i jest on niezmiennie doskonały we wszystkich naszych
+                  lokalizacjach. Gorąco polecam firmę Mood – ułatwili mi pracę, ułatwią ją również Tobie.”
+                </p>
                 <p
                   class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Łukasz Milewski -</span> Łukasz Milewski Consulting-
-                  <a href="#" class="text-blue-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
           </li>
         </ul>
+      </div>
+      <div class="glide__arrows" data-glide-el="controls">
+        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+          <svg xmlns="http://www.w3.org/2000/svg" width="11" height="20" id="arrow">
+            <path fill-rule="evenodd"
+              d="M10.634.292a1.063 1.063 0 0 0-1.464 0L.607 8.556a1.95 1.95 0 0 0 0 2.827l8.625 8.325c.4.385 1.048.39 1.454.01a.975.975 0 0 0 .01-1.425l-7.893-7.617a.975.975 0 0 1 0-1.414l7.83-7.557a.974.974 0 0 0 0-1.413">
+            </path>
+          </svg> </button>
+        <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><svg xmlns="http://www.w3.org/2000/svg"
+            width="11" height="20" id="arrow">
+            <path fill-rule="evenodd"
+              d="M.366 19.708c.405.39 1.06.39 1.464 0l8.563-8.264a1.95 1.95 0 0 0 0-2.827L1.768.292A1.063 1.063 0 0 0 .314.282a.976.976 0 0 0-.011 1.425l7.894 7.617a.975.975 0 0 1 0 1.414L.366 18.295a.974.974 0 0 0 0 1.413">
+            </path>
+          </svg></button>
       </div>
       <div class="flex justify-center">
         <div class="absolute sm:-bottom-20 flex-none -bottom-10" class="glide__bullets" data-glide-el="controls[nav]">
@@ -350,7 +374,7 @@
   </div>
 
   <br>
-
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <script>
     new Glide('.glide', {
       type: 'carousel',
@@ -359,7 +383,7 @@
       autoplay: 15000,
     }).mount()
   </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <!-- Foooter -->
   <section class="bg-white">
     <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8">
