--- a/index.html
+++ b/index.html
@@ -275,63 +275,83 @@
       </div>
     </div>
   </div>
-  <p class="text-center text-4xl font-semibold p-10">
+  <p class="text-center text-4xl font-semibold px-10 pt-20">
     What Our Customers Say
   </p>
   <!-- Opinie klientów -->
-  <div class="mx-auto w-11/12 bg-white pt-10 sm:pl-10 sm:pr-10 sm:pb-10 rounded-lg shadow-lg">
+  <div class="mx-auto w-11/12 bg-white pt-10 sm:pl-10 sm:pr-10 sm:pb-10 pb-0">
     <div class="glide">
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides">
+          <!-- 1 person -->
           <li class="glide__slide">
             <div class="flex justify-center">
-              <img src="./img/person1.jpg" class="rounded-full h-40 sm:mr-1">
+              <div class="flex flex-col">
+                <img src="./img/person1.jpg" alt="person"
+                  class="rounded-full h-42 w-40 sm:mr-1 border-4 border-cyan-600 shadow-lg">
+                <img src="./img/stars.png" alt="stars" class="rounded-full scale-75 h-42 w-40 mt-5">
+              </div>
             </div>
             <div
-              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3 text-left">
-              <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS (Harmony)
+              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-center lg:relative px-16 py-3 text-center">
+              <div class="sm:text-center">
+                <p class="px-10 pb-16 text-xl italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS
+                  (Harmony)
                   spełnia wszystkie nasze wymagania, jeśli chodzi o elastyczność i proaktywne zarządzanie contentem w
                   sklepie. Harmony to również dobry kompromis pomiędzy kosztem a funkcjonalnością, co potwierdza fakt,
                   że platforma została wybrana przez nas w postępowaniu przetargowym. Warto zaznaczyć, że równie ważne
-                  jak powyższe są relacje, jakie mamy z Mood Media. Zespół ds. obsługi klienta zawsze służy wsparciem i
+                  jak powyższe są relacje, jakie mamy z Mood Media. Zespół ds. obsługi klienta zawsze służy wsparciem
+                  i
                   reaguje szybko. Dużą zaletą jest również obsługa klienta w kwestiach technicznych. Bardzo doceniamy
                   to, jak sprawnie sklepy otrzymują potrzebne im wsparcie.”
                 </p>
                 <p
-                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
+                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-32 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Lucyna Tomczyk -</span> Auto Gaz Serwis Dariusz Tomczyk -
-                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-cyan-600">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
           </li>
+          <!-- 2 person -->
           <li class="glide__slide">
             <div class="flex justify-center">
-              <img src="./img/person2.jpg" class="rounded-full h-40 w-28 sm:mr-1">
+              <div class="flex flex-col">
+                <img src="./img/person2.jpg" alt="person"
+                  class="rounded-full h-42 w-40 sm:mr-1 border-4 border-cyan-600 shadow-lg">
+                <img src="./img/stars.png" alt="stars" class="rounded-full scale-75 h-42 w-40 mt-5">
+              </div>
             </div>
-            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3">
-              <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">„Dzięki zastosowaniu marketingu zapachowego w głównym
+            <div
+              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-16 py-3 text-center">
+              <div class="sm:text-center">
+                <p class="px-10 pb-16 text-xl italic text-[#293a40]">„Dzięki zastosowaniu marketingu zapachowego w
+                  głównym
                   wejściu, nasi goście i pracownicy, wchodząc do hubu czują się odprężeni, co odzwierciedla atmosferę,
                   którą chcemy tworzyć w Microsoft. Muzyka w tle również sprawia, że ludzie czują się szczęśliwsi i
                   nadaje zarówno strefie lobby jak restauracji przyjaznego i domowego charakteru.”
                 </p>
                 <p
-                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
+                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-32 lg:pb-10 lg:italic">
                   <span class="font-bold text-[#293a40]">Robert T. Zaborowski -</span> KARO - agencja reklamowa -
-                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-cyan-600">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
           </li>
+          <!-- 3 person -->
           <li class="glide__slide">
             <div class="flex justify-center">
-              <img src="./img/person3.jpg" class="rounded-full h-40 sm:mr-1">
+              <div class="flex flex-col">
+                <img src="./img/person3.jpg" alt="person"
+                  class="rounded-full h-42 w-40 sm:mr-1 border-4 border-cyan-600 shadow-lg">
+                <img src="./img/stars.png" alt="stars" class="rounded-full scale-75 h-42 w-40 mt-5">
+              </div>
             </div>
-            <div class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-12 py-3">
-              <div class="sm:text-left">
-                <p class="p-10 text-xl italic text-[#293a40]">„Jeśli chodzi o doświadczenie klientów w naszych
+            <div
+              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative px-16 py-3 text-center">
+              <div class="sm:text-center">
+                <p class="px-10 pb-16 text-xl italic text-[#293a40]">„Jeśli chodzi o doświadczenie klientów w naszych
                   placówkach, potrzebowaliśmy dostawcy, który zapewni nam świetną muzykę i elastyczne formy komunikatów
                   w przystępnej cenie. Muzyka jest często aktualizowana, a naszym pracownikom i klientom bardzo podoba
                   się to, co słyszą. Komunikaty wywarły pozytywny wpływ na wynik firmy, a firma Mood jest bardzo
@@ -339,9 +359,9 @@
                   lokalizacjach. Gorąco polecam firmę Mood – ułatwili mi pracę, ułatwią ją również Tobie.”
                 </p>
                 <p
-                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-10 lg:pb-10 lg:italic">
+                  class="text-lg italic text-center lg:absolute lg:-bottom-5 lg:text-lg lg:right-0 lg:pr-32 lg:pb-12 lg:italic">
                   <span class="font-bold text-[#293a40]">Łukasz Milewski -</span> Łukasz Milewski Consulting-
-                  <a href="#" class="text-violet-700">Kliknij i zweryfikuj ➜</a>
+                  <a href="#" class="text-cyan-600">Kliknij i zweryfikuj ➜</a>
                 </p>
               </div>
             </div>
@@ -363,7 +383,7 @@
           </svg></button>
       </div>
       <div class="flex justify-center">
-        <div class="absolute sm:-bottom-20 flex-none -bottom-10" class="glide__bullets" data-glide-el="controls[nav]">
+        <div class="absolute sm:-bottom-5 flex-none -bottom-10" class="glide__bullets" data-glide-el="controls[nav]">
           <button class="glide__bullet" data-glide-dir="=0"></button>
           <button class="glide__bullet" data-glide-dir="=1"></button>
           <button class="glide__bullet" data-glide-dir="=2"></button>
