--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="flex justify-center lg:pt-20 lg:pb-20 lg:px-0 md:pt-32 md:pb-28 md:px-10 pb-10 mx-10 pt-10">
         <div class="flex lg:flex-row flex-col w-128 gap-10">
           <!-- tekst 1 segmentu -->
-          <div class="md:text-left text-center z-10 md:w-114 basis-1/2">
+          <div class="md:text-left z-10 md:w-114 basis-1/2">
             <div class="md:text-6xl text-4xl pb-4 leading-12">
               <h2 class="md:text-7xl text-4xl font-bold leading-12 pb-3">O MOOD MEDIA</h2>
               <p
@@ -337,7 +337,7 @@
               </div>
             </div>
             <div
-              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-center lg:relative md:px-16 px-0 py-3 text-justify">
+              class="flex flex-col items-center xl:flex-row xl:justify-center text-center lg:relative md:px-16 px-0 py-3">
               <div class="sm:text-center">
                 <p class="px-10 pb-16 text-lg italic text-[#293a40]">„Wybraliśmy Mood Media, ponieważ system CMS
                   (Harmony)
@@ -367,7 +367,7 @@
               </div>
             </div>
             <div
-              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative md:px-16 px-0 py-3 text-justify">
+              class="flex flex-col items-center xl:flex-row xl:justify-center text-center lg:relative md:px-16 px-0 py-3">
               <div class="sm:text-center">
                 <p class="px-10 pb-16 text-lg italic text-[#293a40]">„Dzięki zastosowaniu marketingu zapachowego w
                   głównym
@@ -393,7 +393,7 @@
               </div>
             </div>
             <div
-              class="flex flex-col items-center xl:flex-row xl:justify-center xl:text-left lg:relative md:px-16 px-0 py-3 text-justify">
+              class="flex flex-col items-center xl:flex-row xl:justify-center text-center lg:relative md:px-16 px-0 py-3">
               <div class="sm:text-center">
                 <p class="px-10 pb-16 text-lg italic text-[#293a40]">„Jeśli chodzi o doświadczenie klientów w naszych
                   placówkach, potrzebowaliśmy dostawcy, który zapewni nam świetną muzykę i elastyczne formy
