changed one header in 'about'

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
     <!-- About -->
   </div>
-  <div class="lg:container lg:mx-auto text-center">
+  <div class="lg:container lg:mx-auto">
     <div class="relative">
       <div class="flex justify-center lg:pt-20 lg:pb-20 lg:px-0 md:pt-32 md:pb-28 md:px-10 pb-10 mx-10 pt-10">
         <div class="flex lg:flex-row flex-col w-128 gap-10">
